# CorpusPilot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
apps/backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_baseline.py  0002_answer_feedback.py  0003_user_isolation.py  fb9c466e539c_db_migration.py
apps/backend/scripts/: run_evals.py
apps/backend/src/: app.py
apps/backend/src/api/: __init__.py  deps.py  sse.py
apps/backend/src/api/routes/: __init__.py  chat.py  documents.py  metrics.py  observability.py
apps/backend/src/core/: config.py  logging.py  metrics.py  tracing.py
apps/backend/src/domain/: __init__.py  profiles.py
apps/backend/src/schemas/: __init__.py  api.py
apps/backend/src/services/: documents.py  embeddings.py  llm.py
apps/backend/src/services/ingestion/: __init__.py  chunking.py  classification.py  parsing.py  pipeline.py  tables.py
apps/backend/src/services/observability/: anomalies.py  feedback.py
apps/backend/src/services/rag/: __init__.py  followups.py  graph.py  memory.py  nodes.py  pipeline.py  prompts.py  sessions.py  state.py  telemetry.py
apps/backend/src/services/retrieval/: __init__.py  cache.py  fusion.py  hybrid.py  lexical.py  semantic.py  types.py
apps/backend/src/storage/: __init__.py  database.py  migrations_legacy.py  models.py
apps/backend/src/storage/repositories/: document_repo.py  feedback_repo.py  query_trace_repo.py
apps/backend/src/vectorstores/: __init__.py  base.py  llamaindex_milvus.py  milvus.py  sync.py
apps/backend/tests/: conftest.py  test_anomalies.py  test_chunking.py  test_config.py  test_domain_profiles.py  test_feedback_summary.py  test_fusion.py  test_memory.py  test_observability.py  test_parsing.py  test_telemetry.py
apps/frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/frontend/src/: App.tsx  index.css  main.tsx  types.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/components/: ChatPanel.tsx  DocumentUpload.tsx  DomainDropdown.tsx  ErrorBoundary.tsx  GitHubStarButton.tsx  IndexedCorpus.tsx  icons.tsx
apps/frontend/src/components/chat/: AnswerMarkdown.tsx  ChatComposer.tsx  CitationChip.tsx  CorpusBanner.tsx  FeedbackBar.test.tsx  FeedbackBar.tsx  FollowUpChips.tsx  MessageCard.tsx  MessageList.tsx  SourceCard.tsx  TelemetryStrip.tsx  ThinkingState.tsx  citations.test.ts  citations.ts  domain.ts  sse.test.ts  sse.ts  types.ts
apps/frontend/src/components/observability/: AnomaliesPanel.tsx  FeedbackPanel.tsx  TelemetryTabs.tsx
apps/frontend/src/hooks/: queries.ts  useChatStream.ts  useUserId.ts
infrastructure/docker/: .env.prod.template  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/grafana/dashboards/: rag.json
infrastructure/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/grafana/provisioning/datasources/: prometheus.yml
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
infrastructure/tempo/: tempo.yaml
